# megasena-ai

./: .gitignore  README.md  docker-compose.yml
backend-rust/: Cargo.toml  Dockerfile
backend-rust/src/: handlers.rs  main.rs  models.rs
data/: megasena.csv
frontend/: Dockerfile  next-env.d.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/jogos/: route.ts
frontend/src/app/dashboard/: page.tsx
frontend/src/components/: ModelSelector.tsx  Resultados.tsx
ia-python/: main.py  model_a.py  model_b.py  model_rf.joblib  train.py
